# project/routes/utils/users_utils.js
@@ -1,4 +1,10 @@
 const DButils = require("./DButils");
+const role_to_role_name = {
+    SUBSCRIBER: 'subscriber',
+    REFEREE: 'referee',
+    PLAYER:  'player',
+    UNION_REP: 'union_representative',
+} ;
 
 async function markPlayerAsFavorite(user_id, player_id) {
   await DButils.execQuery(
@@ -13,12 +19,6 @@ async function getFavoritePlayers(user_id) {
   return player_ids;
 }
  
-const role_to_role_name = {
-    SUBSCRIBER: 'subscriber',
-    REFEREE: 'referee',
-    PLAYER:  'player',
-    UNION_REP: 'union_representative',
-} ;
 
 
 exports.markPlayerAsFavorite = markPlayerAsFavorite;
